--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   "keywords": [],
   "author": "Daniel Stern (Code Whisperer)",
   "license": "MIT",
+  "jest": {
+    "verbose": true,
+    "testEnvironmentOptions": {
+        "url": "http://localhost/"
+    }
+  },
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
